--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "keywords": [],
   "author": "Derek Meduri <derekmeduri@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "create-react-app": "^5.0.1"
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0"
   }
 }
