--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Derek Meduri <derekmeduri@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "create-react-app": "^5.0.1"
+    "create-react-app": "^5.0.1",
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
