--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "meduri.co",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "20.3.1",
+    "npm": "9.6.7"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
