--- a/meduri.co/package.json
+++ b/meduri.co/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.9.0",
     "bootstrap": "^5.3.3",
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "eslint": "^8",
